# goes-meso-visualizer

./: .gitignore  .pre-commit-config.yaml  2023-08-hilary.ipynb  CODE_OF_CONDUCT  MANIFEST.in  Makefile  README.md  index.html  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
data/: ep092023_best_track.kmz  goes-cmi.json  sentinel-1-grd.json  sentinel-2-l2a.json
data/ep092023_best_track/: EP092023_lin.dbf  EP092023_lin.shp  EP092023_lin.shp.xml  EP092023_lin.shx  EP092023_pts.dbf  EP092023_pts.shp  EP092023_pts.shp.xml  EP092023_pts.shx  EP092023_radii.dbf  EP092023_radii.shp  EP092023_radii.shp.xml  EP092023_radii.shx  EP092023_windswath.dbf  EP092023_windswath.kml  EP092023_windswath.shp  EP092023_windswath.shp.xml  EP092023_windswath.shx
notebooks/: 2023-08-hilary.ipynb
scripts/: download-assets  goes_cmi_rgb.py  update-requirements
src/e84_hilary/: cli.py  colorize.py  constants.py  ep092023_best_track.json  goes.py  html.py  shapes.py  solarize.py  tile.py
src/e84_hilary/templates/: index.html
src/goes_meso_visualizer/: cli.py  colorize.py  constants.py  search.py  shapes.py  solarize.py  web_png.py
src/goes_meso_visualizer/templates/: index.html
src/goes_meso_visualizer/tracks/: al132023_best_track.json  ep092023_best_track.json
tests/: conftest.py  test_cli.py  test_colorize.py  test_search.py  test_solarize.py  test_web_png.py
tests/cassettes/test_cli/: test_search.yaml
tests/cassettes/test_search/: test_goes.yaml
tests/data/: colorize.json  download.json  search.json  solarize.json
tests/data/OR_ABI-L2-M1-M6_G18_s20232290300294/: OR_ABI-L2-MCMIPM1-M6_G18_s20232290300294_e20232290300357_c20232290300428_CMI_C01.tif  OR_ABI-L2-MCMIPM1-M6_G18_s20232290300294_e20232290300357_c20232290300428_CMI_C02.tif  (+4 more)
