[project]
name = "e84_hilary"
version = "0.0.0"                                                                                                   # this package is not meant for release
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
description = "Visualization for Hurricane Hilary, which struck the west coast of the United States in August 2023"
readme = "README.md"
requires-python = "~=3.11.0"
license = { text = "Apache-2.0" }
dynamic = ["dependencies", "optional-dependencies"]
scripts = { e84-hilary = "e84_hilary.cli:cli" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
optional-dependencies = { dev = { file = "requirements-dev.txt" } }

[tool.mypy]
strict = true

[tool.ruff]
include = ["F", "E", "I", "RUF"]

[tool.isort]
profile = "black"
