[project]
name = "goes-meso-visualizer"
version = "0.0.0"                                                         # this package is not meant for release
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
description = "Visualize GEOS mesoscale data in a browser map"
readme = "README.md"
requires-python = "~=3.11.0"
license = { text = "Apache-2.0" }
dynamic = ["dependencies", "optional-dependencies"]
scripts = { goes-meso-visualizer = "goes_meso_visualizer.cli:cli" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
optional-dependencies = { dev = { file = "requirements-dev.txt" } }

[tool.mypy]
strict = true

[tool.ruff]
include = ["F", "E", "I", "RUF"]

[tool.isort]
profile = "black"
